tests/errors/variavel_desconhecida.c
#include <stdio.h>
int main(void) {
    printf("%d\n", total); // 'total' is undeclared
    return 0;
}
